<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    app:cardElevation="100dp"
    app:cardCornerRadius="10dp"
    android:layout_marginVertical="5dp"
    android:layout_marginHorizontal="10dp"
    android:background="@drawable/borde"
    android:animateLayoutChanges="true">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/notificacion"
        android:hint="Aqui va la notificacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroundlogin"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/nombreServicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="5dp"
                android:hint="@string/nombreServicio"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/plan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="5dp"
                android:hint="@string/planServicio"
                android:textColor="@color/black"
                android:textSize="20dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/precio"
                android:textColor="@color/black"
                android:hint="@string/precioServicio"
                android:layout_marginTop="30dp"
                android:textSize="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tipoSuscripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/tipoSuscripcion"
                android:textColor="@color/black"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/mMenu"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="top|end"
                android:src="@drawable/ic_more" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/estado"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:hint="@string/estado"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>


</com.google.android.material.card.MaterialCardView>